kubernetes/canary-services/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-api-service
spec:
  selector:
    app: django-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
