kubernetes/canary-services/virtual-service-10-percent.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: django-virtualservice
spec:
  hosts:
  - "*"
  gateways:
    - django-gateway 
  http:
  - route:
    - destination:
        host: django-api-service
        subset: v1
      weight: 90
    - destination:
        host: django-api-service
        subset: v2
      weight: 10
